--- a/css/style.css
+++ b/css/style.css
@@ -7,15 +7,6 @@ body {
 	/* cc: https://www.digitalocean.com/community/projects */
 }
 
-.github-corner {
-    border-bottom: 0;
-    position: fixed;
-    right: 0;
-    text-decoration: none;
-    top: 0;
-    z-index: 1;
-}
-
 .page-header {
     margin: 10px 0 20px;
 }
@@ -23,3 +14,5 @@ body {
 .new-container-fluid {
     padding-bottom: 15px;
 }
+
+.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}
