--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,12 @@ body {
 }
 
 .github-corner:hover .octo-arm {
+	border-bottom: 0;
+	position: fixed;
+    	right: 0;
+	text-decoration: none;
+	top: 0;
+	z-index: 1;
 	animation: octocat-wave 560ms ease-in-out
 }
 
