--- a/css/style.css
+++ b/css/style.css
@@ -61,11 +61,11 @@ body {
 
 #poc, #highlighting {
   /* Both elements need the same text and space styling so they are directly on top of each other */
-  margin: 10px;
+  /*margin: 10px;
   padding: 10px;
-  border: 0;
+  border: 0;*/
   width: calc(100% - 32px);
-  height: 150px;
+  /*height: 150px;*/
 }
 #poc, #highlighting, #highlighting * {
   /* Also add text styles to highlighing tokens */
@@ -79,8 +79,8 @@ body {
 #poc, #highlighting {
   /* In the same place */
   position: absolute;
-  top: 0;
-  left: 0;
+  /*top: 0;
+  left: 0;*/
 }
 
 
@@ -146,8 +146,8 @@ pre[class*="language-"] {
 
 /* Code blocks */
 pre[class*="language-"] {
-  padding: .4em .8em;
-  margin: .5em 0;
+  /*padding: .4em .8em;
+  margin: .5em 0;*/
   overflow: auto;
   /* background: url('data:image/svg+xml;charset=utf-8,<svg%20version%3D"1.1"%20xmlns%3D"http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg"%20width%3D"100"%20height%3D"100"%20fill%3D"rgba(0%2C0%2C0%2C.2)">%0D%0A<polygon%20points%3D"0%2C50%2050%2C0%200%2C0"%20%2F>%0D%0A<polygon%20points%3D"0%2C100%2050%2C100%20100%2C50%20100%2C0"%20%2F>%0D%0A<%2Fsvg>');
   background-size: 1em 1em; - WebCoder49*/
