--- a/css/style.css
+++ b/css/style.css
@@ -63,9 +63,9 @@ body {
   /* Both elements need the same text and space styling so they are directly on top of each other */
   /*margin: 10px;
   padding: 10px;
-  border: 0;*/
+  border: 0;
   width: calc(100% - 32px);
-  /*height: 150px;*/
+  height: 150px;*/
 }
 #poc, #highlighting, #highlighting * {
   /* Also add text styles to highlighing tokens */
