--- a/css/style.css
+++ b/css/style.css
@@ -107,8 +107,8 @@ body {
 
 /* Can be scrolled */
 #poc, #highlighting {
-  overflow: auto;
-  white-space: nowrap; /* Allows textarea to scroll horizontally */
+  /*overflow: auto;
+  white-space: nowrap;*. /* Allows textarea to scroll horizontally */
 }
 
 /* No resize on textarea */
